workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__sidebar_focus_shows_the_action_hints.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │> fix the login redirect                                               "
" ▾ api                      │⏺ Updating middleware...                                               "
"▐  ◉ fix-login              │✳ Waiting for input                                                    "
"   ◆ rate-limit             │                                                                       "
"   ○ docs-update            │                                                                       "
" ▾ lisa                     │                                                                       "
"   no worktrees · n         │                                                                       "
" ▾ web                      │                                                                       "
"   ✔ new-checkout           │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
" ⏎ open · n new · p project · e rename · d remove · r restart · ? help · q quit                     "
