workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__suggestion_marks_the_agent_and_fills_the_model.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
"                                                                       │ PROJECTS                   "
"                                                                       │▐▾ api                      "
"                                                                       │   ◉ fix-login              "
"       ┌ New worktree in api ─────────────────────────────────┐        │   ◆ rate-limit             "
"       │  Name    fix-login-redirect                          │        │   ○ docs-update            "
"       │          branch: fix-login-redirect                  │        │ ▾ web                      "
"       │                                                      │        │   ✔ new-checkout           "
"       │  Task    Fix the redirect loop on login when the     │        │ ▾ lisa                     "
"       │          session cookie has expired                  │        │   no worktrees · n         "
"       │                                                      │        │                            "
"       │› Agent   ● claude  suggested · 86%                   │        │                            "
"       │          ○ opencode  no full autonomy                │        │                            "
"       │          ○ gemini  not installed                     │        │                            "
"       │                                                      │        │                            "
"       │  Model   ‹ opus ›   effort ‹ high ›                  │        │                            "
"       │                                                      │        │                            "
"       │  Mode    (•) normal   ( ) full autonomy              │        │                            "
"       │                                                      │        │                            "
"       │  ⏎ create · tab next field · ←→ change · esc cancel  │        │                            "
"       └──────────────────────────────────────────────────────┘        │                            "
"                                                                       │                            "
"                                                                       │                            "
"                                                                       │                            "
"                                                                                                    "
