workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__the_task_step_fits_the_smallest_terminal.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                               "
"▐▾ api                      │                               "
"   ◉ fix-login              │                               "
"   ◆ r┌ New worktree in api ─────────────────────────────┐  "
"   ○ d│› Task    ▏                                       │  "
" ▾ lis│                                                  │  "
"   no │  ⏎ skip · esc cancel                             │  "
" ▾ web└──────────────────────────────────────────────────┘  "
"   ✔ new-checkout           │                               "
"                            │                               "
"                            │                               "
"                                                            "
