workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__the_welcome_screen_shows_the_wordmark_next_steps_and_the_agents.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                                           "
"▐▾ api                      │                                                                                           "
"   ◉ fix-login              │                                                                                           "
"   ◆ rate-limit             │                                                                                           "
"   ○ docs-update            │                                                                                           "
" ▾ lisa                     │                                                                                           "
"   no worktrees · n         │                                                                                           "
" ▾ web                      │                                                                                           "
"   ✔ new-checkout           │                      ██      ██  ███████   █████                                          "
"                            │                      ██      ██  ██       ██   ██                                         "
"                            │                      ██      ██  ███████  ███████                                         "
"                            │                      ██      ██       ██  ██   ██                                         "
"                            │                      ███████ ██  ███████  ██   ██                                         "
"                            │                                                                                           "
"                            │                      Map projects. Run agents. Stay in the terminal.                      "
"                            │                                                                                           "
"                            │                      n  starts a worktree in api                                          "
"                            │                      p  adds a project or a group                                         "
"                            │                      ?  shows every key                                                   "
"                            │                                                                                           "
"                            │                      1 needs you · 1 working · 1 done         v2.7.0                      "
"                            │                                                                                           "
"                            │                                                                                           "
"                            │                                                                                           "
"                            │                                                                                           "
"                            │                                                                                           "
"                            │                                                                                           "
"                            │                                                                                           "
"                            │                                                                                           "
" ⏎ fold · n new · e rename · ? keys                                                                                     "
