workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__tiny_terminal_says_so.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"         Terminal too small (need 60×12)          "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
