workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__ungroup_asks_and_says_nothing_is_deleted.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
"▐▾ B-Metric                 │                                                                       "
"   ◉ fix-ingest-lag     api │                                                                       "
"   ◆ dashboard-filter   web │       ┌ Ungroup ─────────────────────────────────────────────┐        "
" ▾ bloom                    │       │  Ungroup B-Metric?                                   │        "
"   no worktrees · n         │       │  Its repositories become standalone projects.        │        "
" ▾ lisa                     │       │  Nothing is deleted.                                 │        "
"   ✔ sidebar-groups         │       │                                                      │        "
"                            │       │  y ungroup · esc cancel                              │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
