workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__unsure_suggestion_says_so.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ New worktree in api ─────────────────────────────────┐        "
"   ○ docs-update            │       │  Name    fix-login-redirect                          │        "
" ▾ web                      │       │          branch: fix-login-redirect                  │        "
"   ✔ new-checkout           │       │                                                      │        "
" ▾ lisa                     │       │  Task    Fix the redirect loop on login when the     │        "
"   no worktrees · n         │       │          session cookie has expired                  │        "
"                            │       │                                                      │        "
"                            │       │› Agent   ● claude  unsure · your default             │        "
"                            │       │          ○ opencode  no full autonomy                │        "
"                            │       │          ○ gemini  not installed                     │        "
"                            │       │                                                      │        "
"                            │       │  Model   ‹ sonnet ›   effort ‹ medium ›              │        "
"                            │       │                                                      │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
