workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__wide_layout_puts_the_agent_left_and_the_sidebar_right.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
"> fix the login redirect                                               │ PROJECTS                   "
"⏺ Updating middleware...                                               │ ▾ api                      "
"✳ Waiting for input                                                    │▐  ◉ fix-login              "
"                                                                       │   ◆ rate-limit             "
"                                                                       │   ○ docs-update            "
"                                                                       │ ▾ web                      "
"                                                                       │   ✔ new-checkout           "
"                                                                       │ ▾ lisa                     "
"                                                                       │   no worktrees · n         "
"                                                                       │                            "
"                                                                       │                            "
"                                                                       │                            "
"                                                                       │                            "
" api/fix-login · claude                                                                    ^a menu  "
