workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__wide_layout_puts_the_sidebar_left_and_the_agent_right.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │> fix the login redirect                                               "
" ▾ api                      │⏺ Updating middleware...                                               "
"▐  ◉ fix-login              │✳ Waiting for input                                                    "
"   ◆ rate-limit             │                                                                       "
"   ○ docs-update            │                                                                       "
" ▾ lisa                     │                                                                       "
"   no worktrees · n         │                                                                       "
" ▾ web                      │                                                                       "
"   ✔ new-checkout           │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
" ^a sidebar                                                                  api/fix-login · claude "
