workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__with_the_router_the_new_worktree_dialog_asks_only_for_the_task.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │                                                                       "
"   ○ docs-update            │                                                                       "
" ▾ lisa                     │                                                                       "
"   no worktrees · n         │                                                                       "
" ▾ web                      │       ┌ New worktree in api ─────────────────────────────────┐        "
"   ✔ new-checkout           │       │› Task    Fix the redirect loop on login▏             │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ continue · esc cancel                             │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
